# noesis

./: .env.example  .gitignore  PLEASEREADLLM.md  README.md  client.py  dashboard.py  main.py  pyproject.toml  run_cli.py  run_discord.py  test_ingest.py
agents/: critic.py  executor.py  goal_manager.py  orchestrator.py  planner.py  schemas.py  self_initiative.py  tools.py  trigger_store.py
agents/memory/: __init__.py  base.py  episodic_store.py  episodic_writer.py
agents/tools/: __init__.py  discord.py  python_execute.py  reddit.py  registry.py  run_command.py  web_search.py
app/: __init__.py  lifespan.py
config/: model_router.yaml
core/: daemon.py  events.py  model_router.py  queues.py
integrations/: api.py  service.py
integrations/llm/: __init__.py  client.py  config.py  router.py  schemas.py  service.py
integrations/reddit/: __init__.py  (+3 more)
learning/: test.py
perception/: __init__.py  config.py  dispatcher.py  layer.py  reactive_pool.py  schemas.py
prompts/: executor_system.txt  manager_system.txt  triage_batch_system.txt
static/: index.html  script.js  style.css
tests/: test_agent.py  test_api.py  test_command_tool.py  test_dispatcher.py  test_goal_manager.py  test_live_models.py  test_llm_router.py  test_model_router.py  test_perception.py  test_planner.py  test_python_tool.py  test_reddit.py  test_tavily.py
triggers/: __init__.py  daemon.py  store.py  triage.py
utils/: callbacks.py  daemon.py  dashboard.py  event_bus.py  json_parser.py  llm_log_formatter.py  log_writer.py  logging_setup.py  prompts.py  run_logger.py  ssl_patch.py  tracer.py
(+15 files in other folders)
