[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
